<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_transaksi_pengguna"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_transaksi_pengguna" />
        <item
            android:id="@+id/nav_tukarpoint_pengguna"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tukarpoint_pengguna" />
        <item
            android:id="@+id/nav_gantipassword_pengguna"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gantipassword_pengguna" />
        <item
            android:id="@+id/nav_gantinohp_pengguna"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gantinohp_pengguna" />
        <item
            android:id="@+id/nav_logout_pengguna"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout_admin" />
    </group>
</menu>