<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tukarsampah.Dashboard.Pengguna.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/dashboard_pengguna_fragment" />

    <fragment
        android:id="@+id/nav_transaksi_pengguna"
        android:name="com.example.tukarsampah.Dashboard.Pengguna.ui.transaksipengguna.transaksipenggunaFragment"
        android:label="@string/menu_transaksi_pengguna"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tukarpoint_pengguna"
        android:name="com.example.tukarsampah.Dashboard.Pengguna.ui.tukarpointpengguna.tukarpointpenggunaFragment"
        android:label="@string/menu_tukarpoint_pengguna"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_gantipassword_pengguna"
        android:name="com.example.tukarsampah.Dashboard.Pengguna.ui.gantipasswordpengguna.gantipasswordpenggunaFragment"
        android:label="@string/menu_gantipassword_pengguna"
        tools:layout="@layout/gantipassword_fragment" />
</navigation>